# branch-gauge

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: cmake.yml
attacks/: BSUP.cpp  BaseBPU.cpp  HyBP.cpp  LSBP.cpp  NoisyXorBP.cpp  STBPU.cpp  XorBP.cpp
exps/: exp1_reuse.cpp  exp1_reuse.py  exp2_prune.cpp  exp2_prune.py  exp3_occupancy.cpp  exp3_occupancy.py  exp4_leakage.cpp  exp4_leakage.py  run.sh
exps/output_ref/: exp1_reuse_access.txt  exp1_reuse_collision_rate.txt  exp2_pruning_access.txt  exp2_pruning_collision.txt  exp3_btb_collision_rate.txt  exp3_btb_pruning_access.txt  exp3_pht_collision_rate.txt  exp3_pht_pruning_access.txt  exp4_btb_access_1.txt  exp4_btb_access_2.txt  exp4_btb_access_3.txt  exp4_btb_access_4.txt  exp4_pht_access_1.txt  exp4_pht_access_2.txt  exp4_pht_access_3.txt  exp4_pht_access_4.txt
exps/plot/: fig10-pht-occupancy-n.py  fig11-btb-occupancy-n.py  fig12-pht-occupancy-pr.py  fig13-btb-occupancy-pr.py  fig14-leakage-reuse-1.py  fig15-leakage-reuse-2.py  fig6-reuse-n.py  fig7-reuse-pr.py  fig8-btb-prune-n.py  fig9-btb-prune-pr.py  plot.sh  tab2-leakage-pht.py  tab3-leakage-btb.py
include/predictors/: BSUP.hpp  BaseBPU.hpp  HyBP.hpp  LSBP.hpp  NoisyXorBP.hpp  STBPU.hpp  XorBP.hpp
include/utils/: Qarma64.cpp  Qarma64.hpp  Utils.hpp
predictors/: BSUP.cpp  BaseBPU.cpp  HyBP.cpp  LSBP.cpp  NoisyXorBP.cpp  STBPU.cpp  XorBP.cpp
